package com.aromas.perfumaria.enums;

public enum NivelAcesso {
    GERENTE,
    VENDEDOR,
    ADMINISTRADOR
}
