package com.aromas.perfumaria.enums;

public enum TipoRelatorio {
    VENDAS,
    PRODUTOS,
    PROMOCOES
}
